@startuml

class FlightsController
class BusyFlightsService
FlightsController ..> BusyFlightsService: uses

interface AirlineService
class SupplierService
class ToughJetService
class CrazyAirService

AirlineService <|-- BusyFlightsService
AirlineService <|-- SupplierService
SupplierService <|-- ToughJetService
SupplierService <|-- CrazyAirService

interface ExternalService
class ToughJetExternalService
class CrazyAirExternalService

ExternalService <|-- ToughJetExternalService
ExternalService <|-- CrazyAirExternalService

interface RequestMapper
class ToughJetRequestMapper
class CrazyAirRequestMapper

RequestMapper <|-- ToughJetRequestMapper
RequestMapper <|-- CrazyAirRequestMapper

interface ResponseMapper
class ToughJetResponseMapper
class CrazyAirResponseMapper

ResponseMapper <|-- ToughJetResponseMapper
ResponseMapper <|-- CrazyAirResponseMapper


SupplierService ..> RequestMapper: uses
SupplierService ..> ExternalService: uses
SupplierService ..> ResponseMapper: uses

@enduml